--- a/Bludy.cfg
+++ b/Bludy.cfg
@@ -2,11 +2,11 @@ gameinstructor_enable "0"
 con_enable "1"
 volume "0.1"
 
-viewmodel_presetpos "0"
 viewmodel_fov "68"
 viewmodel_offset_x "2.5"
-viewmodel_offset_y "3"
-viewmodel_offset_z "-1.500000"
+viewmodel_offset_y "-1"
+viewmodel_offset_z "-1.5"
+viewmodel_presetpos "0"
 cl_viewmodel_shift_left_amt "0"
 cl_viewmodel_shift_right_amt "0"
 
@@ -14,11 +14,11 @@ cl_disablehtmlmotd "1"
 cl_disablefreezecam "1"
 cl_autohelp "0"
 cl_showhelp "0"
-cl_bob_lower_amt "21"
+cl_bob_lower_amt "5"
 cl_bobamt_lat "0"
 cl_bobamt_vert "0"
 cl_bobcycle "2"
-cl_interp "0.031000"
+cl_interp "0.015625"
 cl_interp_ratio "1"
 
 snd_mixahead "0.05"
@@ -40,20 +40,20 @@ voice_mixer_volume "1.0"
 
 mm_csgo_community_search_players_min "3"
 mm_dedicated_search_maxping "60"
-mat_monitorgamma "1.75"
+mat_monitorgamma "1.6"
 mat_monitorgamma_tv_enabled "0"
 mat_queue_mode "2"
 
 m_rawinput "1"
 m_customaccel "0" 
 m_mousespeed "0"
-sensitivity "1.1"
+sensitivity "1.4"
 zoom_sensitivity_ratio_mouse "0.8"
 
 cl_crosshair_sniper_width "1"
-cl_crosshaircolor "4"
-cl_crosshairsize "1.5"
-cl_crosshairgap "-2"
+cl_crosshaircolor "1"
+cl_crosshairsize "4"
+cl_crosshairgap "0"
 cl_crosshairalpha "255"
 cl_crosshairstyle "4" 
 cl_crosshairthickness "0"
@@ -66,7 +66,7 @@ cl_fixedcrosshairgap "-5"
 							
 cl_cmdrate "128"
 cl_updaterate "128"
-rate "9999999"
+rate "128000"
 
 r_drawtracers_firstperson 1
 r_dynamic "0"
@@ -96,7 +96,6 @@ cl_hud_color "2"
 cl_hud_healthammo_style "1"
 cl_hud_playercount_pos "2"
 cl_hud_playercount_showcount "1"
-cl_hud_radar_scale "1"
 cl_teammate_colors_show 1
 hud_scaling "1"
 
@@ -110,4 +109,5 @@ bind "j" "+jumpthrow"
 bind "MWHEELDOWN" "+jump"
 BindToggle "n" "volume" 
 bind "shift" "+speed; r_cleardecals"
+BindToggle "t" "cl_righthand"
 bind "mwheelup" "use weapon_molotov; use weapon_incgrenade"
